# google-adk-learning

./: .gitignore  pyproject.toml
1 - basic-agent/: README.md
1 - basic-agent/greeting_agent/: agent.py
2 - basic-tools/google_search_agent/: agent.py
2-basic-tools/: README.md
2-basic-tools/get_current_time_agent/: agent.py
3 - litellm/: README.md
3 - litellm/openai-agent/: agent.py
4 - structured-outputs/: README.md
4-structured-outputs/email_agent/: agent.py
5 - sessions-and-state/: README.md  basic_stateful_session.py
5-sessions-and-state/: basic_stateful_session.py
5-sessions-and-state/question_answering_agent/: agent.py
6-persistent-storage/: README.md  main.py  utils.py
6-persistent-storage/memory_agent/: agent.py
